--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.ricoco.bridgingpractise</groupId>
     <artifactId>BridgingPractise</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.2.1<!-- -SNAPSHOT--></version>
 
     <properties>
         <java.version>8</java.version>
