--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.ricoco.bridgingpractise</groupId>
     <artifactId>BridgingPractise</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0<!-- -SNAPSHOT--></version>
 
     <properties>
         <java.version>8</java.version>
@@ -70,12 +70,6 @@
             <groupId>cn.nukkit</groupId>
             <artifactId>nukkit</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>de.theamychan</groupId>
-            <artifactId>ScoreboardAPI</artifactId>
-            <version>1.3-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
